[gd_scene load_steps=6 format=3 uid="uid://corla0kg5dkju"]

[ext_resource type="Script" path="res://player/button_scene.gd" id="1_jnqnm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hwxa1"]
bg_color = Color(0.28125, 0.243896, 0.243896, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6k06p"]
bg_color = Color(0.789063, 0.0308228, 0.0308228, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a3utx"]
bg_color = Color(0.282353, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekn11"]

[node name="Rect" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 45.0
offset_top = 46.0
offset_right = 68.0
offset_bottom = 56.0
script = ExtResource("1_jnqnm")

[node name="Pokemon0Container" type="ColorRect" parent="."]
clip_contents = true
custom_minimum_size = Vector2(20, 10)
layout_mode = 0
offset_right = 23.0
offset_bottom = 18.0
color = Color(0.243137, 0.172549, 0.172549, 0.521569)

[node name="PokemonTexture" type="TextureRect" parent="Pokemon0Container"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 15.0
offset_bottom = 14.0
expand_mode = 2

[node name="PokemonHP" type="ProgressBar" parent="Pokemon0Container"]
layout_mode = 0
offset_top = 14.0
offset_right = 23.0
offset_bottom = 16.0
theme_override_styles/background = SubResource("StyleBoxFlat_hwxa1")
theme_override_styles/fill = SubResource("StyleBoxFlat_6k06p")
value = 20.0
show_percentage = false

[node name="PokemonName" type="Label" parent="Pokemon0Container"]
layout_mode = 0
offset_right = 247.0
offset_bottom = 45.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 24
text = "Pokemon Name"

[node name="PokemonXP" type="ProgressBar" parent="Pokemon0Container"]
layout_mode = 0
offset_top = 16.0
offset_right = 23.0
offset_bottom = 18.0
theme_override_styles/background = SubResource("StyleBoxFlat_a3utx")
theme_override_styles/fill = SubResource("StyleBoxFlat_ekn11")
value = 20.0
show_percentage = false

[node name="Pokemon0Button" type="Button" parent="Pokemon0Container"]
visible = false
layout_mode = 0
offset_right = 23.0
offset_bottom = 18.0
focus_neighbor_left = NodePath("../../Pokemon2Container/Pokemon2Button")
focus_neighbor_top = NodePath("../../Pokemon3Container/Pokemon3Button")
focus_neighbor_right = NodePath("../../Pokemon1Container/Pokemon1Button")
focus_neighbor_bottom = NodePath("../../Pokemon3Container/Pokemon3Button")
flat = true

[node name="PokemonID" type="Label" parent="Pokemon0Container"]
layout_mode = 0
offset_left = 16.0
offset_top = 11.0
offset_right = 86.0
offset_bottom = 41.0
scale = Vector2(0.1, 0.1)
text = "ID"

[connection signal="focus_entered" from="Pokemon0Container/Pokemon0Button" to="." method="_on_pokemon_0_button_focus_entered"]
